--- a/metadata.yaml
+++ b/metadata.yaml
@@ -47,6 +47,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Pocket gophers -- Utah'
 - !lcc 'QH'
+- GITenberg
 title: "The Pocket Gophers (Genus Thomomys) of Utah\r\nUniversity of Kansas Publications,\
   \ Museum of Natural History, Vol. 1 No. 1"
 url: http://www.gutenberg.org/ebooks/39164
